--- a/BlazorApp/Components/Pages/Counter.razor
+++ b/BlazorApp/Components/Pages/Counter.razor
@@ -1,27 +1,25 @@
 ﻿@page "/counter"
 @rendermode InteractiveServer
 
-<PageTitle>Counter</PageTitle>
-
 <h1>Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
+<p>Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
-@if (currentCount > 100)
-{
-    <p>plus que 100</p>
-}
 
 @code {
     private int currentCount = 0;
 
-    [Parameter]
-    public int IncrementAmount { get; set; } = 1;
-
-    private void IncrementCount()
+    private void IncrementCount(MouseEventArgs e)
     {
-        currentCount += IncrementAmount;
+        if (e.CtrlKey) // Ctrl key pressed as well
+        {
+            currentCount += 5;
+        }
+        else
+        {
+            currentCount++;
+        }
     }
 }
