--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -37,6 +37,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> CC
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="importfiles">
+                <span class="bi bi-database-add-nav-menu" aria-hidden="true"></span> Importer fichiers
+            </NavLink>
+        </div>
     </nav>
 </div>
 
