--- a/BlazorApp/Components/Pages/Input.razor
+++ b/BlazorApp/Components/Pages/Input.razor
@@ -1,7 +1,6 @@
-@page "/input"
 @rendermode InteractiveServer
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>Saisir une opération ou un relevé</PageTitle>
 
 <h1>Input</h1>
 
