--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -39,7 +39,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="importfiles">
+            <NavLink class="nav-link" href="input">
                 <span class="bi bi-database-add-nav-menu" aria-hidden="true"></span> Importer fichiers
             </NavLink>
         </div>
