Ajout choix de la base de données : Test ou Production

--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@using BlazorApp.Components
+
 
 <div class="page">
     <div class="sidebar">
@@ -6,8 +8,9 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
+        <div class="top-row px-4 d-flex justify-content-between align-items-center">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <DatabaseSelector />
         </div>
 
         <article class="content px-4">
