--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -43,6 +43,12 @@
                 <span class="bi bi-database-add-nav-menu" aria-hidden="true"></span> Importer fichiers
             </NavLink>
         </div>
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="operationseditor">
+                <span class="bi bi-bank" aria-hidden="true"></span> Editer les opérations
+            </NavLink>
+        </div>
     </nav>
 </div>
 
